tests/snapshots/integration__integration_tests__list__task_dag_many_worktrees.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--progressive"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
  [1mBranch[0m      [1mStatus[0m        [1mHEAD±[0m    [1mmain↕[0m  [1mPath[0m                [1mRemote⇅[0m  [1mCommit[0m    [1mAge[0m   [1mMessage
@ main            [2m^[22m                         .                            [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit
+ [2mfeature-1[0m       [2m_[22m                         [2m../repo.feature-1[0m            [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit
+ [2mfeature-10[0m      [2m_[22m                         [2m../repo.feature-10[0m           [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit
+ [2mfeature-2[0m       [2m_[22m                         [2m../repo.feature-2[0m            [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit
+ [2mfeature-3[0m       [2m_[22m                         [2m../repo.feature-3[0m            [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit
+ [2mfeature-4[0m       [2m_[22m                         [2m../repo.feature-4[0m            [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit
+ [2mfeature-5[0m       [2m_[22m                         [2m../repo.feature-5[0m            [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit
+ [2mfeature-6[0m       [2m_[22m                         [2m../repo.feature-6[0m            [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit
+ [2mfeature-7[0m       [2m_[22m                         [2m../repo.feature-7[0m            [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit
+ [2mfeature-8[0m       [2m_[22m                         [2m../repo.feature-8[0m            [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit
+ [2mfeature-9[0m       [2m_[22m                         [2m../repo.feature-9[0m            [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit

[2m○[22m [2mShowing 11 worktrees

----- stderr -----
